feat: add atomic processing dispatch
